[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TUtils-cli"
version = "0.1.1a1"
description = "TUtils command-line utility toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jared3Dev",email="ruxia.tjy@qq.com"}
]
keywords = ["TUtils-cli","cli","TUtils","command-line"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Environment :: Console",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "typer>=0.23.1",
    "rich",
    "pyyaml>=6.0",           # YAML 配置支持
    "pydantic>=1.10.0",      # 数据验证
]

[project.scripts]
tutils = "tutils.cli:app"

[project.urls]
Homepage = "https://github.com/ruxia-TJY/TUtils"
Documentation = "https://github.com/ruxia-TJY/TUtils"
Repository = "https://github.com/ruxia-TJY/TUtils.git"
Issues = "https://github.com/ruxia-TJY/TUtils/issues"
Changelog = "https://github.com/ruxia-TJY/TUtils/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["tutils"]